--- a/volunteer-together-app/public/index.html
+++ b/volunteer-together-app/public/index.html
@@ -11,6 +11,8 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQdXjUnjQHJINv-x9Z_tLpSo7nL7_qo9o"></script>
+
 </head>
 
 <body>
